changed bootstrap column classes; added path to cookie; used site-wide css variables for color (in so doing added a new one to sitewide definitions); couple more adjustments to css.

--- a/app/assets/stylesheets/local/__variables.scss
+++ b/app/assets/stylesheets/local/__variables.scss
@@ -12,6 +12,7 @@ $brand-red: #d8262e;
 $brand-yellow: #dbe341;
 //$brand-blue: #76c3d4;
 $brand-blue: #4bb0c7; // zack instructed us to use this slightly darker shade
+$brand-medium-blue: #4b81e8; // e.g. accept cookies button.
 $brand-light-grey: #bcbcbc; // not actually very light
 $brand-dark-grey: #646469;
 
