--- a/app/views/shared/_accept_cookies_banner.html.erb
+++ b/app/views/shared/_accept_cookies_banner.html.erb
@@ -6,7 +6,7 @@
             aria-live="polite"
             aria-label="accept_cookies"
             aria-describedby="accept_cookies_copy" >
-            <div class="col-md-10 i-accept-copy" id="accept_cookies_copy">
+            <div class="col-sm-10 i-accept-copy" id="accept_cookies_copy">
                 This website uses cookies to perform analytics,
                 improve functionality, and enhance user experience.
                 You may set your browser to
@@ -15,7 +15,7 @@
                 For more information, please visit our
                 <a href="https://www.sciencehistory.org/site-terms">privacy policy</a>.
             </div>
-            <div class="col-md-2 i-accept-div text-center">
+            <div class="col-sm-2 i-accept-div text-center">
                 <a href="#"
                     class="i-accept-link"
                     aria-label="dismiss cookie message"
