re-adding copy change -this somehow didn't get committed before

--- a/app/views/admin/fixity/index.html.erb
+++ b/app/views/admin/fixity/index.html.erb
@@ -6,7 +6,7 @@
     <% if @no_failed_checks %>
         <h2><span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span> No problems to report.</h2>
     <%else %>
-        <h2>The following fixity checks recently failed:</h2>
+        <h2>The following fixity checks have failed:</h2>
         <table class="table">
         <thead>
           <tr>
