adding a reference to the overridden Sufia template.

--- a/app/views/sufia/admin/_sidebar.html.erb
+++ b/app/views/sufia/admin/_sidebar.html.erb
@@ -1,3 +1,4 @@
+<%# Overrides https://github.com/samvera/sufia/blob/v7.4.0/app/views/sufia/admin/_sidebar.html.erb . %>
 <ul class="admin-sidebar nav nav-pills nav-stacked">
   <li class="<%= 'active' if current_page? sufia.admin_stats_path %>">
     <%= link_to sufia.admin_stats_path do %>
