removing the off-brand blue color for the button and replacing it (for now) with our standard brand light blue.

--- a/app/assets/stylesheets/local/footer.scss
+++ b/app/assets/stylesheets/local/footer.scss
@@ -152,7 +152,7 @@ nav.accept_cookies_banner_nav {
       padding-top: 12px;
       white-space: nowrap;
       color: white;
-      background-color: $brand-medium-blue;
+      background-color: $brand-blue;
       text-decoration: none;
       font-size: .9em;
       font-weight: 700;
