--- a/app/views/sufia/admin/_sidebar.html.erb
+++ b/app/views/sufia/admin/_sidebar.html.erb
@@ -1,4 +1,7 @@
-<%# Overrides https://github.com/samvera/sufia/blob/v7.4.0/app/views/sufia/admin/_sidebar.html.erb . %>
+<%#
+This template overrides https://github.com/samvera/sufia/blob/v7.4.0/app/views/sufia/admin/_sidebar.html.erb .
+The only purpose for this override is to add an admin sidebar link to the the fixity checks dashboard, which you can access at /admin/fixity .
+%>
 <ul class="admin-sidebar nav nav-pills nav-stacked">
   <li class="<%= 'active' if current_page? sufia.admin_stats_path %>">
     <%= link_to sufia.admin_stats_path do %>
