--- a/app/views/sufia/uploads/_js_templates.html.erb
+++ b/app/views/sufia/uploads/_js_templates.html.erb
@@ -33,8 +33,9 @@
 
 <!-- function used by the following template -->
 <script type="text/javascript">
-  function setAllResourceTypes(resourceTypeId) {
-    var firstResourceType = $("#resource_type_" + resourceTypeId.toString())[0];
+  function setAllResourceTypes(link) {
+    var firstResourceType  = $(link).prev("select")[0];
+    //var firstResourceType = $("#resource_type_" + resourceTypeId.toString())[0];
     var selected_options = [];
     for (var i = 0; i < firstResourceType.length; i++) {
       if (firstResourceType.options[i].selected) {
@@ -83,7 +84,7 @@
                   <select class="form-control resource_type_dropdown" multiple="multiple" size="6" name="resource_type[{%=file.id%}][]" id="resource_type_{%=file.id%}" value="{%=file.name%}">
                     <%= options_for_select(ResourceTypesService.select_options) %>
                   </select>
-                  <button class="btn pull-right resource_type_button" onClick="setAllResourceTypes({%= file.id %}); return false;">Set all to this Format</button>
+                  <button class="btn pull-right resource_type_button" onClick="setAllResourceTypes(this); return false;">Set all to this Format</button>
                 </div>
               </div>
             </div>
