--- a/app/views/admin/fixity/index.html.erb
+++ b/app/views/admin/fixity/index.html.erb
@@ -4,7 +4,7 @@
 <% end %>
 <div>
     <% if @no_checks %>
-      <p>There are no fixity checks are on record in the database.</p>
+      <p>There are no fixity checks on record in the database.</p>
     <% else %>
       <% if @no_failed_checks %>
           <h2><span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span> No problems to report.</h2>
