--- a/app/assets/stylesheets/local/homepage.scss
+++ b/app/assets/stylesheets/local/homepage.scss
@@ -176,3 +176,56 @@
     }
   }
 }
+
+$recent-items-box-width: 350px;
+$recent-items-box-height: 350px;
+$recent-items-box-margin: 59px;
+
+.recent-items-list {
+  /* background-color: $brand-dark-grey; */
+  padding-top: 34px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+
+  .recent-item {
+    position: relative;
+    width: $recent-items-box-width;
+    min-width: $recent-items-box-width;
+    height: $recent-items-box-height;
+    margin: $recent-items-box-margin;
+
+    @media (max-width: $recent-items-box-width) {
+      width: 100vw;
+      min-width: auto;
+      height: 100vw;
+      margin: $recent-items-box-margin 0;
+    }
+    .recent-items-image {
+      max-height: $recent-items-box-height
+    }
+
+    .recent-item-title-wrapper {
+      /* overlay on image */
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 56px;
+      color: $brand-dark-blue;
+      background-color: $brand-bright-green;
+      padding: 10px;
+
+      .recent-item-title {
+        font-family: "adelle-sans", "Helvetica Neue", Helvetica, Arial, sans-serif, "Helvetica Neue", Helvetica, Arial, sans-serif;
+        text-align: center;
+        font-weight: $semi-bold-weight;
+        /* text-transform: uppercase; */
+        font-size: 18px;
+        padding-top: 5px;
+        padding-bottom: 5px;
+      }
+    }
+  }
+}
