--- a/app/assets/stylesheets/local/homepage.scss
+++ b/app/assets/stylesheets/local/homepage.scss
@@ -99,6 +99,15 @@
   $categories-box-height: 350px;
   $categories-box-margin: 59px;
 
+
+  .categories-title-div {
+    padding-left: 15px;
+    background-color: $brand-dark-grey;
+    h2 {
+      margin-bottom:0px;
+    }
+  }
+
   .categories-list {
     background-color: $brand-dark-grey;
     padding-top: 34px;
@@ -177,13 +186,22 @@
   }
 }
 
-$recent-items-box-width: 350px;
-$recent-items-box-height: 350px;
-$recent-items-box-margin: 59px;
+$recent-items-box-width: 140px;
+$recent-items-box-height: 140px;
+$recent-items-box-margin: 30px;
+
+.recent-items-title_div {
+  padding-left: 15px;
+  background-color: $brand-light-grey;
+  margin-bottom: 0px;
+  h2 {
+    margin-bottom:0px;
+  }
+}
+
 
 .recent-items-list {
-  /* background-color: $brand-dark-grey; */
-  padding-top: 34px;
+  background-color: $brand-light-grey;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -206,25 +224,33 @@ $recent-items-box-margin: 59px;
       max-height: $recent-items-box-height
     }
 
+    .recent-item-image-matte {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: $brand-dark-grey;
+    }
+
     .recent-item-title-wrapper {
       /* overlay on image */
       position: absolute;
       bottom: 0;
       left: 0;
       width: 100%;
-      height: 56px;
       color: $brand-dark-blue;
-      background-color: $brand-bright-green;
-      padding: 10px;
+      background-color: rgba(0, 0, 0, 0.7);
 
       .recent-item-title {
         font-family: "adelle-sans", "Helvetica Neue", Helvetica, Arial, sans-serif, "Helvetica Neue", Helvetica, Arial, sans-serif;
+        color: white;
+        opacity: 1.0;
         text-align: center;
         font-weight: $semi-bold-weight;
         /* text-transform: uppercase; */
-        font-size: 18px;
-        padding-top: 5px;
-        padding-bottom: 5px;
+        font-size: 12px;
+        margin-bottom: 0px;
       }
     }
   }
