--- a/app/views/sufia/homepage/index.html.erb
+++ b/app/views/sufia/homepage/index.html.erb
@@ -26,7 +26,7 @@
   </div>
   <%= render 'sufia/homepage/recent_items' %>
 
-  <div class='row featured-topics-title-div'>
+  <div class='row categories-title-div'>
     <h2 class="brand-alt-h2">Featured Topics</h2>
   </div>
 
