--- a/app/views/sufia/homepage/_recent_items.html.erb
+++ b/app/views/sufia/homepage/_recent_items.html.erb
@@ -8,7 +8,7 @@
             <%= link_to main_app.curation_concerns_generic_work_path(work['id']) do %>
               <%= image_tag  work['thumbnail_path_ss'], class: "recent-items-image", width: "100%"%>
               <div class="recent-item-title-wrapper">
-              <p class="recent-item-title"><%= work['title_tesim'].first %></p>
+              <p class="recent-item-title"><%= work['title_tesim'].first.truncate(35) %></p>
               </div>
             <% end # link %>
         </div>
