--- a/app/views/sufia/homepage/_recent_items.html.erb
+++ b/app/views/sufia/homepage/_recent_items.html.erb
@@ -1,5 +1,5 @@
 <div class="row recent-items-title_div">
-  <h2 class="brand-alt-h2">Recently Added Items</h2>
+  <h2 class="brand-alt-h2">Recently Added</h2>
 </div>
 <div class="row recent-items-list">
     <% recent_items.each do |work| %>
