Adding accessibility (alt tag and figcaption)

--- a/app/assets/stylesheets/local/homepage.scss
+++ b/app/assets/stylesheets/local/homepage.scss
@@ -236,6 +236,9 @@ $recent-items-box-margin: 30px;
         background-color: $brand-dark-grey;
     }
 
+    .recent-items-image {
+      width: 100%;
+    }
     .recent-item-title-wrapper {
       @if $collage-style == true {
         display: none;
