--- a/app/views/sufia/homepage/_recent_items.html.erb
+++ b/app/views/sufia/homepage/_recent_items.html.erb
@@ -2,17 +2,21 @@
   <h2 class="brand-alt-h2">Recently Added</h2>
 </div>
 <div class="row recent-items-list">
-    <% recent_items.each do |work| %>
+  <% recent_items.each do |work| %>
     <div class="recent-item">
         <div class="recent-item-image-matte">
             <%= link_to main_app.curation_concerns_generic_work_path(work['id']) do %>
-              <%= image_tag  work['thumbnail_path_ss'], class: "recent-items-image", width: "100%"%>
-              <div class="recent-item-title-wrapper">
-              <p class="recent-item-title"><%= work['title_tesim'].first.truncate(35) %></p>
-              </div>
+              <figure>
+                <%= image_tag  work['thumbnail_path_ss'], class: "recent-items-image", alt: work['title_tesim'].first %>
+                <figcaption>
+                  <div class="recent-item-title-wrapper">
+                    <p class="recent-item-title"><%= work['title_tesim'].first.truncate(35) %></p>
+                  </div>
+                </figcaption>
+              </figure>
             <% end # link %>
         </div>
     </div>
-    <% end # each %>
+  <% end # each %>
 </div>
 
