Switching over to collage-style display. Also memoizing a couple calls to SOLR.

--- a/app/assets/stylesheets/local/homepage.scss
+++ b/app/assets/stylesheets/local/homepage.scss
@@ -202,7 +202,7 @@
   }
 }
 
-$collage-style: false;
+$collage-style: true;
 /* i.e. no titles, no horizontal border between images. */
 $recent-items-box-width: 140px;
 $recent-items-box-height: 140px;
