Adding a centering div per jrochkind's suggestion

--- a/app/assets/stylesheets/local/homepage.scss
+++ b/app/assets/stylesheets/local/homepage.scss
@@ -229,6 +229,7 @@ $recent-items-box-margin: 30px;
   padding-bottom: 30px;
 
   .recent-item {
+    float:left;
     position: relative;
     width: $recent-items-box-width;
     min-width: $recent-items-box-width;
