center recent items horizontally

--- a/app/assets/stylesheets/local/homepage.scss
+++ b/app/assets/stylesheets/local/homepage.scss
@@ -223,6 +223,7 @@ $recent-items-box-margin: 30px;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  justify-content: center;
   padding-left: 15px;
   padding-right: 15px;
   padding-top: 15px;
