--- a/app/views/sufia/homepage/_recent_items.html.erb
+++ b/app/views/sufia/homepage/_recent_items.html.erb
@@ -2,7 +2,7 @@
   <h2 class="brand-alt-h2">Recently Added</h2>
 </div>
 <div class="row recent-items-list">
-  <div class="col-md-10 col-md-offset-1 recent-items_centering_div">
+  <div class="recent-items-list-content">
     <% recent_items.each do |work| %>
       <div class="recent-item">
         <div class="recent-item-image-matte">
