--- a/app/views/curation_concerns/base/show.html.erb
+++ b/app/views/curation_concerns/base/show.html.erb
@@ -104,6 +104,7 @@
         <%= @presenter.attribute_to_html(:engraver, render_as: :faceted, search_field: 'maker_facet') %>
         <%= @presenter.attribute_to_html(:interviewee, render_as: :faceted, search_field: 'maker_facet') %>
         <%= @presenter.attribute_to_html(:interviewer, render_as: :faceted, search_field: 'maker_facet') %>
+        <%= @presenter.attribute_to_html(:manner_of, render_as: :faceted, search_field: 'maker_facet') %>
         <%= @presenter.attribute_to_html(:manufacturer, render_as: :faceted, search_field: 'maker_facet') %>
         <%= @presenter.attribute_to_html(:photographer, render_as: :faceted, search_field: 'maker_facet') %>
         <%= @presenter.attribute_to_html(:contributor, render_as: :faceted, search_field: 'maker_facet') %>
