--- a/app/views/curation_concerns/file_sets/_show_actions.html.erb
+++ b/app/views/curation_concerns/file_sets/_show_actions.html.erb
@@ -20,21 +20,18 @@
   <% end %>
 
   <% if @presenter.respond_to? :parent %>
-    <% if  MemberHelper.can_promote_to_child_work?(
-      current_user,
-      GenericWork.find(@presenter.parent.id),
-      FileSet.find(@presenter.id)
-      ) %>
-      <div class="alert alert-info fade in alert-dismissible">
-          If you want to add metadata to this item (e.g. for an illustration in a book), you can promote it to a child work.
-      </div>
+    <% if current_ability.can?(:edit, @presenter.id) && current_ability.can?(:edit, parent.id) %>
+    <div class="alert alert-info fade in alert-dismissible">
+        If you want to add metadata to this item
+        (e.g. for an illustration in a book),
+        you can promote it to a child work.
+    </div>
 
      <%=  link_to "Promote to child work ...",
       "/concern/parent/#{@presenter.parent.id}/file_sets/#{@presenter.id}/to_child_work" ,
       class: 'btn btn-info',
       data: { confirm: "Promote \"#{@presenter.title.first}\" to a child work of \"#{@presenter.parent.title.first}\" ?" },
       method: :post %>
-
     <% end %>
   <% end %>
 
