--- a/app/views/curation_concerns/base/show.html.erb
+++ b/app/views/curation_concerns/base/show.html.erb
@@ -40,15 +40,7 @@
       <% if @presenter.parent_work_presenters.present? || @presenter.source.present? %>
         <ul class="parent-works list-unstyled">
           <% (@presenter.parent_work_presenters || []).each do |parent| %>
-            <li>Part of <%= link_to Array(parent.title).first, [main_app, parent] %>
-               <% if current_ability.can?(:destroy, @presenter.id)   && current_ability.can?(:edit, parent.id) %>
-                <%=  link_to "Demote to file ...",
-                "/works/parent/#{parent.id}/child/#{@presenter.id}/to_fileset" ,
-                class: 'btn btn-danger',
-                data: { confirm: "Demote \"#{@presenter.title.first}\" to a file? The metadata on this child work will be discarded if you do this." },
-                method: :post %>
-              <% end %>
-            </li>
+            <li>Part of <%= link_to Array(parent.title).first, [main_app, parent] %></li>
           <% end %>
           <% (@presenter.source || []).each do |source| %>
             <li> Part of <i><%= source %></i></li>
