Only drawing grey border around actual PDF thumbnails.

--- a/app/assets/stylesheets/local/results.scss
+++ b/app/assets/stylesheets/local/results.scss
@@ -220,6 +220,10 @@
       }
     }
 
+    .chf-results-list-item-thumb.pdf_border img{
+      border: 2px solid grey;
+    }
+
     .chf-results-list-item-content {
       max-width: calc(67% - 28px);
     }
