--- a/app/assets/stylesheets/local/work-show.scss
+++ b/app/assets/stylesheets/local/work-show.scss
@@ -182,7 +182,12 @@
       // aspect ratio, cause the dimensions are so responsive. This is just
       // a rough huge limit, if it's not working out just delete this and give up.
       max-height: 300vw;
+
+      &.pdf_border {
+        border: 2px solid grey;
+      }
     }
+
 
     .show-page-member-title {
       position: absolute;
