Use vipsthumbnail & vips sharpen to create PDF thumbnails

--- a/app/assets/stylesheets/local/work-show.scss
+++ b/app/assets/stylesheets/local/work-show.scss
@@ -184,10 +184,9 @@
       max-height: 300vw;
 
       &.pdf_border {
-        border: 2px solid grey;
+        border: 2px solid #050939;
       }
     }
-
 
     .show-page-member-title {
       position: absolute;
