--- a/app/assets/stylesheets/local/results.scss
+++ b/app/assets/stylesheets/local/results.scss
@@ -221,7 +221,7 @@
     }
 
     .chf-results-list-item-thumb.pdf_border img{
-      border: 2px solid grey;
+      border: 2px solid #050939;
     }
 
     .chf-results-list-item-content {
