--- a/app/views/curation_concerns/base/_social_media.html.erb
+++ b/app/views/curation_concerns/base/_social_media.html.erb
@@ -76,16 +76,20 @@ end %>
 
   <!-- Sharingbutton Tumblr -->
   <%# see https://www.tumblr.com/docs/en/share_button %>
-  <%= link_to "https://www.tumblr.com/widgets/share/tool?#{{posttype: 'photo', content: share_media, caption: title_plus_description, canonicalUrl: share_url, shareSource: 'tumblr_share_button'}.to_param}",
-              class: 'social-media-link tumblr btn btn-brand-dark',
-              target: '_blank',
-              rel: 'noopener noreferrer',
-              data: {
-                analytics_category: "Work",
-                analytics_action: "share_tumblr",
-                analytics_label: id
-              },
-              title: t('curation_concerns.base.social_media.tumblr') do %>
-    <i class="fa fa-tumblr"></i>
+  <%# We're removing this button, per
+  https://github.com/sciencehistory/chf-sufia/issues/1172 .  %>
+  <% if false %>
+    <%= link_to "https://www.tumblr.com/widgets/share/tool?#{{posttype: 'photo', content: share_media, caption: title_plus_description, canonicalUrl: share_url, shareSource: 'tumblr_share_button'}.to_param}",
+                class: 'social-media-link tumblr btn btn-brand-dark',
+                target: '_blank',
+                rel: 'noopener noreferrer',
+                data: {
+                  analytics_category: "Work",
+                  analytics_action: "share_tumblr",
+                  analytics_label: id
+                },
+                title: t('curation_concerns.base.social_media.tumblr') do %>
+      <i class="fa fa-tumblr"></i>
+    <% end %>
   <% end %>
 </div>
