Adding a target=_blank to all links inside collection and genericwork descriptions

--- a/app/views/collections/_collection_description.erb
+++ b/app/views/collections/_collection_description.erb
@@ -1,5 +1,5 @@
 <% presenter.description.each do |description| %>
     <p class="collection_description">
-        <%= iconify_auto_link(format_description(description)) %>
+        <%=format_description(description)%>
     </p>
 <% end %>
