--- a/app/views/curation_concerns/base/show.html.erb
+++ b/app/views/curation_concerns/base/show.html.erb
@@ -101,6 +101,7 @@
         <%= @presenter.attribute_to_html(:author, render_as: :faceted, search_field: 'maker_facet') %>
         <%= @presenter.attribute_to_html(:addressee, render_as: :faceted, search_field: 'maker_facet') %>
         <%= @presenter.attribute_to_html(:creator_of_work, render_as: :faceted, search_field: 'maker_facet' ) %>
+        <%= @presenter.attribute_to_html(:editor,   render_as: :faceted, search_field: 'maker_facet') %>
         <%= @presenter.attribute_to_html(:engraver, render_as: :faceted, search_field: 'maker_facet') %>
         <%= @presenter.attribute_to_html(:interviewee, render_as: :faceted, search_field: 'maker_facet') %>
         <%= @presenter.attribute_to_html(:interviewer, render_as: :faceted, search_field: 'maker_facet') %>
