Adds "Attributed to" metadata.

--- a/app/views/curation_concerns/base/show.html.erb
+++ b/app/views/curation_concerns/base/show.html.erb
@@ -98,6 +98,7 @@
 
     <table class="<%= dom_class(@presenter) %> chf-attributes">
         <%= @presenter.attribute_to_html(:artist, render_as: :faceted, search_field: 'maker_facet') %>
+        <%= @presenter.attribute_to_html(:attributed_to, render_as: :faceted, search_field: 'maker_facet') %>
         <%= @presenter.attribute_to_html(:author, render_as: :faceted, search_field: 'maker_facet') %>
         <%= @presenter.attribute_to_html(:addressee, render_as: :faceted, search_field: 'maker_facet') %>
         <%= @presenter.attribute_to_html(:creator_of_work, render_as: :faceted, search_field: 'maker_facet' ) %>
