--- a/app/views/curation_concerns/base/_attribute_rows.html.erb
+++ b/app/views/curation_concerns/base/_attribute_rows.html.erb
@@ -1,4 +1,5 @@
 <%= presenter.attribute_to_html(:artist, render_as: :faceted, search_field: 'maker_facet') %>
+<%= presenter.attribute_to_html(:attributed_to, render_as: :faceted, search_field: 'maker_facet') %>
 <%= presenter.attribute_to_html(:author, render_as: :faceted, search_field: 'maker_facet') %>
 <%= presenter.attribute_to_html(:addressee, render_as: :faceted, search_field: 'maker_facet') %>
 <%= presenter.attribute_to_html(:creator_of_work, render_as: :faceted, search_field: 'maker_facet' ) %>
