Show rudimentary html5 players on front end

--- a/app/assets/stylesheets/local/work-show.scss
+++ b/app/assets/stylesheets/local/work-show.scss
@@ -207,6 +207,13 @@
         border-bottom-right-radius: 0;
       }
     }
+    audio {
+      width: 99%;
+      margin-bottom: 50%;
+      margin-left: 2%;
+      margin-top: 5%;
+      cursor: pointer;
+    }
   }
 
   .show-page-image-wrapper.thumb {
